--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Chau+Philomene+One&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -21,12 +22,12 @@
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
-    #def9fa 0.89%,
-    #bef3f5 17.23%,
-    #9dedf0 42.04%,
-    #7de7eb 55.12%,
-    #5ce1e6 71.54%,
-    #33bbcf 100%
+    #676b38 0.89%,
+    #6e723b 17.23%,
+    #5d6125 42.04%,
+    #6d7437 55.12%,
+    #7a8047 71.54%,
+    #4B5022 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
